fix feed spacing, and slight spacing around related articles

--- a/less/style-responsive.less
+++ b/less/style-responsive.less
@@ -473,7 +473,7 @@ and (orientation : portrait) {
 	}
 	#related-posts {
 		& li.post {
-			display: block !important;
+			// display: block !important;
 		}
 		& div.catlinks {
 			display: none;
